Less link for Docker layer to have a faster build