@@ -109,7 +109,7 @@ configure(subprojects.findAll { ['core', 'examples'].contains(it.name) }) {
     }
 
     test {
-        jvmArgs '-XX:+UseConcMarkSweepGC', '-XX:+CMSClassUnloadingEnabled'
+        jvmArgs '-XX:+CMSClassUnloadingEnabled'
         minHeapSize = "128m"
         maxHeapSize = "512m"
         testLogging {
